--- a/.github/workflows/run-tests-on-push.yml
+++ b/.github/workflows/run-tests-on-push.yml
@@ -21,4 +21,4 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
 
       - name: Test project
-        run: ./gradlew test
+        run: ./gradlew test itest
