added unique name constraint to endpoint

--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -557,6 +557,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/PlayerDto'
+        '409':
+          description: Player name already exists
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
   /api/v1/player/{playerId}:
     get:
