--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          platforms: linux/arm64,linux/arm64
+          platforms: linux/arm64,linux/amd64
           push: true
           tags: lblcs/dennys:${{ env.VERSION }}
             
