--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -32,7 +32,7 @@ jobs:
         run: ./gradlew test itest
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
     needs: tests
     steps:
       - uses: actions/checkout@v4
@@ -48,8 +48,8 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PAT }}
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+     # - name: Set up QEMU
+     #   uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -57,7 +57,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          platforms: linux/arm64,linux/amd64
+     #     platforms: linux/arm64,linux/amd64
           file: docker/Dockerfile
           push: true
           tags: lblcs/dennys:${{ env.VERSION }}
@@ -76,8 +76,8 @@ jobs:
           script: |
             # Create install release
             cd /lblcs/docker/dennys
-            rm -rf release-{{ env.VERSION }}
-            mkdir release-{{ env.VERSION }}
-            cd release-{{ env.VERSION }}
+            rm -rf release-${{ env.VERSION }}
+            mkdir release-${{ env.VERSION }}
+            cd release-${{ env.VERSION }}
             git clone https://github.com/lowbudgetlcs/dennys.git .
-            /lblcs/scripts/dennys/release.sh -v {{ env.VERSION }} -z {{ secrets.ZONE_ID }} -c {{ secrets.CLOUDFLARE_DNS_TOKEN }} {{ secrets.RIOT_API_TOKEN }}
+            /lblcs/scripts/dennys/release.sh -v ${{ env.VERSION }} -z ${{ secrets.ZONE_ID }} -c ${{ secrets.CLOUDFLARE_DNS_TOKEN }} ${{ secrets.RIOT_API_TOKEN }}
