Scratch installing the release- the image is pushed to registry. Just need to cd to release script and execute that...

--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -81,10 +81,5 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            # Create install release
-            cd /lblcs/docker/dennys
-            rm -rf release-${{ env.VERSION }}
-            mkdir release-${{ env.VERSION }}
-            cd release-${{ env.VERSION }}
-            git clone https://github.com/lowbudgetlcs/dennys.git .
-            /lblcs/scripts/dennys/release.sh -v ${{ env.VERSION }} -z ${{ secrets.ZONE_ID }} -c ${{ secrets.CLOUDFLARE_DNS_TOKEN }} ${{ secrets.RIOT_API_TOKEN }}
+            cd /lblcs/scripts/dennys
+            ./release.sh -v ${{ env.VERSION }} -z ${{ secrets.ZONE_ID }} -c ${{ secrets.CLOUDFLARE_DNS_TOKEN }} ${{ secrets.RIOT_API_TOKEN }}
