--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -73,6 +73,17 @@ jobs:
         run: |
           echo "VERSION=$(cat VERSION)" > $GITHUB_ENV
 
+      - name: Copy to Remote Server
+        uses: pierrickdelrieu/scp-action@v0.1.0
+        with:
+          host: ${{ secrets.SSH_HOST}}
+          ssh_port: ${{ secrets.SSH_PORT }}
+          ssh_username: ${{ secrets.SSH_USERNAME }}
+          ssh_key: ${{ secrets.SSH_KEY }}
+          source_dir: src/migrations/sql
+          destination_dir: /lblcs/scripts/dennys/migrations
+          rm: true
+
       - name: Deploy release in staging
         uses: appleboy/ssh-action@v1.0.3
         with:
