--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -74,14 +74,14 @@ jobs:
           echo "VERSION=$(cat VERSION)" > $GITHUB_ENV
 
       - name: Copy to Remote Server
-        uses: pierrickdelrieu/scp-action@v0.1.0
+        uses: appleboy/scp-action@v1
         with:
           host: ${{ secrets.SSH_HOST}}
-          ssh_port: ${{ secrets.SSH_PORT }}
-          ssh_username: ${{ secrets.SSH_USERNAME }}
-          ssh_key: ${{ secrets.SSH_KEY }}
-          source_dir: src/migrations/sql
-          destination_dir: /lblcs/scripts/dennys/migrations
+          port: ${{ secrets.SSH_PORT }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          source: src/migrations/sql
+          target: /lblcs/scripts/dennys/migrations
           rm: true
 
       - name: Deploy release in staging
