Fixed action args.

--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -80,7 +80,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY }}
-          source: src/migrations/sql
+          source: src/migrations/sql/*
           target: /lblcs/scripts/dennys/migrations
           rm: true
 
