--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -13,7 +13,7 @@ externalDocs:
   description: Find out more about Dennys
   url: https://github.com/lowbudgetlcs/dennys
 servers:
-  - url: http://localhost:9292
+  - url: /api
 
 tags:
   - name: v1/event
@@ -35,7 +35,7 @@ tags:
     description: Riot account linking/removal
 
 paths:
-  /api/v1/event:
+  /v1/event:
     get:
       tags:
         - v1/event
@@ -107,7 +107,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /api/v1/event/{eventId}:
+  /v1/event/{eventId}:
     get:
       tags:
         - v1/event
@@ -191,7 +191,7 @@ paths:
                 $ref: "#/components/schemas/Error"
 
 
-  /api/v1/event/{eventId}/teams:
+  /v1/event/{eventId}/teams:
     get:
       summary: Get an event with all teams included
       operationId: getTeamsInEvent
@@ -222,7 +222,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /api/v1/event/{eventId}/teams/{teamId}:
+  /v1/event/{eventId}/teams/{teamId}:
     post:
       summary: Assign a team to an event
       operationId: addTeamToEvent
@@ -286,7 +286,7 @@ paths:
         '404':
           description: Event or team not found
 
-  /api/v1/team:
+  /v1/team:
     get:
       summary: Get all teams (optionally filter by event)
       operationId: getTeams
@@ -349,7 +349,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /api/v1/team/{teamId}:
+  /v1/team/{teamId}:
     get:
       summary: Get a team by ID
       operationId: getTeamById
@@ -419,7 +419,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /api/v1/team/{teamId}/players:
+  /v1/team/{teamId}/players:
     get:
       summary: Get a team with all the players included
       operationId: getPlayersOnTeam
@@ -451,7 +451,7 @@ paths:
                 $ref: '#/components/schemas/Error'
 
 
-  /api/v1/team/{teamId}/players/{playerId}:
+  /v1/team/{teamId}/players/{playerId}:
     post:
       summary: Add a player to a team
       operationId: addPlayerToTeam
@@ -518,7 +518,7 @@ paths:
         '404':
           description: Team or player not found
 
-  /api/v1/player:
+  /v1/player:
     get:
       summary: Get all players
       operationId: getPlayers
@@ -558,7 +558,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/PlayerDto'
 
-  /api/v1/player/{playerId}:
+  /v1/player/{playerId}:
     get:
       summary: Get player by ID
       operationId: getPlayerById
@@ -628,7 +628,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /api/v1/player/{playerId}/accounts:
+  /v1/player/{playerId}/accounts:
     post:
       summary: Add a Riot account to a player
       operationId: addAccountToPlayer
@@ -687,7 +687,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /api/v1/player/{playerId}/accounts/{accountId}:
+  /v1/player/{playerId}/accounts/{accountId}:
     delete:
       summary: Remove a Riot account from a player
       operationId: removeAccountFromPlayer
