--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -1,42 +1,34 @@
-name: Build application image, push to registry, deploy to production
+name: Deploy production application
 
 on:
   push:
     paths-ignore:
       - 'docker/**'
-      - 'gradle/**'
       - '.gitignore'
-      - 'README.md'
-      - 'LICENSE.txt'
+      - '*.md'
+      - '*.txt'
       - 'shell.nix'
       - 'Makefile'
       - 'compose.yml'
+      - 'gradlew'
+      - 'gradlew.bat'
+      - 'src/itest/**'
+      - 'src/test/**'
 
-    branches: 
+    branches:
       - 'main'
 
 jobs:
-  
-  build-push:
-    runs-on: ubuntu-latest
-    needs: env
+  build:
+    runs-on: ubuntu-24.04-arm
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set app name and version
-        shell: bash
-        run: |
-          VER=$(cat VERSION)
-          echo "VERSION=$VER" > $GITHUB_ENV
-                
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PAT }}
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -44,11 +36,9 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          platforms: linux/arm64
+          file: docker/Dockerfile
           push: true
-          tags: 
-            - lblcs/dennys:latest
-            - lblcs/dennys:${{ env.VERSION }}
+          tags: lblcs/dennys:latest
 
   deploy:
     needs: build
@@ -66,7 +56,9 @@ jobs:
             echo LBLCS_JDBC_URL="${{ secrets.LBLCS_JDBC_URL }}" > .env
             echo LBLCS_JDBC_PW="${{ secrets.LBLCS_JDBC_PW }}" >> .env
             echo RIOT_API_TOKEN="${{ secrets.RIOT_API_TOKEN }}" >> .env
+            echo RIOT_USE_STUBS=False >> .env
             docker compose down
             docker compose pull
             docker compose up -d
             rm -f ./.env
+
