--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -79,7 +79,7 @@ jobs:
           source: src/migrations/sql/*
           target: /lblcs/scripts/dennys/${{ env.VERSION }}/migrations
           overwrite: true
-          strip_components: true
+          strip_components: 3 
 
       - name: Deploy release in staging
         uses: appleboy/ssh-action@v1.0.3
