Committing source change to trigger client lib build..

--- a/.github/workflows/build-client-libraries.yml
+++ b/.github/workflows/build-client-libraries.yml
@@ -3,7 +3,7 @@ name: Build supported client libraries.
 on:
   push:
     paths:
-      - 'src/main'
+      - 'src/main/kotlin'
 
     branches:
       - 'main'
