Removed unecessary login (we manually create the npmrc file).

--- a/.github/workflows/build-client-libraries.yml
+++ b/.github/workflows/build-client-libraries.yml
@@ -17,20 +17,18 @@ jobs:
 
       - name: Generate typescript package
         run: |
-          mkdir sdk-ts
+          mkdir ts-sdk
           docker run --rm \
-            -v ./src/main/resources/openapi:/local openapitools/openapi-generator-cli generate \
+            -v ./:/out \
+            -v ./src/main/resources/openapi:/local \
+            openapitools/openapi-generator-cli generate \
             -i /local/documentation.yaml \
             -g typescript \
-            -o /local/sdk-ts \
+            -o /out/ts-sdk \
             --additional-properties=npmName=@lblcs/dennys-sdk-typescript,npmRepository=https://${{ secrets.NEXUS_URL }}/repository/npm-lblcs,platform=node
-
-      - name: Login to remote
-        run: |
-          echo '//${{ secrets.NEXUS_URL }}/repository/:_authToken=NpmToken.${{ secrets.NPM_TOKEN }}' >> .npmrc
-          npm login --registry https://${{ secrets.NEXUS_URL }}/repository/npm-lblcs
 
       - name: Publish package to npm repo 
         run: |
-          cd sdk-ts
+          echo '//${{ secrets.NEXUS_URL }}/repository/:_authToken=NpmToken.${{ secrets.NPM_TOKEN }}' > ~/.npmrc
+          cd ts-sdk
           npm publish .
